# kao_janken

./: README.md  pyproject.toml
src/: face_mesh.py  hand_bone.py  lesson_1.py  lesson_10.py  lesson_11.py  lesson_12.py  lesson_2.py  lesson_3.py  lesson_4.py  lesson_5.py  lesson_6.py  lesson_6_beta.py  lesson_7.py  lesson_8.py  lesson_8_simple.py  lesson_9.py  uv_test.py
tool/: uv_mac.sh  uv_windows.bat  uv_windows.ps1
